@@ -1,0 +1,7 @@
+import Foundation
+
+enum MigrationState: String {
+    case notStarted
+    case inProgress
+    case completed
+}
